2008-09-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.*: Prevent damage to dead NPCs (makes armageddon work better).
	  Prevent Penumbra and Skara Brae ghosts from awakening in a more consistent
	  manner.
	* npctime.cc: Fixed waking up of NPCs by proximity.
	* keyactions.cc, objs/spellbook.cc, usecode/*: set_intercept can now store
	  a tile as well as an object.
	* mapedit/*, gamemgr/*: Added way to set an encoding option for text of mods
	  and games to ease translation mods.
	* General: Eliminating almost all GCC 4.x compilation warnings.
	* usecode/compiler/ucparse.yy: Indirect intrinsic calls can be done using
	  '(@num)(params)' or 'obj->(@num)(params)'.

2008-09-04	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* tools/ipack.cc: Fixed Shape_spec constructors, mix-up of strdup/delete.
	* objs/spellbook.cc: Fixed spell costs in SI.
	* actors.*, schedule.cc: Have sleep schedule set/clear sleep flag (fixes
	  Gorlab with automatons in party).
	* cheat_screen.cc: Prevent more than 8 party members.

2008-09-02	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/*: Reverted demonstrably wrong itemref behavior. Added usecode
	  array stealing to create_script instead of making a copy.
	* audio/*, drag.cc: A few SFX fixes for BG/SI.
	* effects.cc: Prevent missiles from hitting the attacker if it is equal to
	  the target (fixed death bolt/mind blast loops when avatar is target).
	  Added hack to call the missile's usecode (with target = 0) even in that
	  case (makes mind blast behave like the original when targetting avatar).
	* actors.cc: Fixed powers of nondamaging spells.

2008-09-01	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.*: Prevent weapons with no base damage from causing any damage.
	  Keep spellbook in hand if NPC can still cast selected spell. Save custom
	  shape to be used as casting frames (mainly for new games).
	* combat.cc: Prevent fellow party members from acquiring avatar's target if